--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -22,9 +22,9 @@ jobs:
         python-version: 3.8
     - name: Install dependencies
       run: |
+        working-directory: src/search_engine_crawler
         python -m pip install --upgrade pip
-        pip install flake8 pytest
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        pip install -r requirements.txt -r requirements-test.txt
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
@@ -33,4 +33,5 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
-        pytest
+        working-directory: src/search_engine_crawler
+        python -m unittest discover -s tests/ 
