--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Set up Python 3.8
       uses: actions/setup-python@v2
       with:
-        python-version: 3.8
+        python-version: 2.7
     - name: Install dependencies
       working-directory: src/search_engine_crawler
       run: |
@@ -30,5 +30,5 @@ jobs:
     - name: Test with 
       working-directory: src/search_engine_crawler
       run: |
-
+        python -c "import sys; print(sys.version)"
         python -m unittest discover -s tests/ 
