--- a/docker/docker-compose-monitoring.yml
+++ b/docker/docker-compose-monitoring.yml
@@ -70,9 +70,26 @@ services:
     networks:
       - prometheus_net
 
+  grafana:
+    image: grafana/grafana
+    depends_on:
+      - prometheus
+    ports:
+      - 3000:3000
+    volumes:
+      - grafana_data:/var/lib/grafana
+      - ./grafana/provisioning/:/etc/grafana/provisioning/
+    environment:
+      - GF_SECURITY_ADMIN_USER=admin
+      - GF_SECURITY_ADMIN_PASSWORD=secret
+    networks:
+      - prometheus_net
+    restart: always
+
+
 volumes:
   prometheus_data:
-#  grafana_data:
+  grafana_data:
 
 networks:
     net_back:
