--- a/helm/templates/ui-service.yml
+++ b/helm/templates/ui-service.yml
@@ -5,7 +5,7 @@ metadata:
   labels:
     release: {{ .Release.Name }}
 spec:
-  type: LoadBalancer
+  type: ClusterIP
   selector:
     app: ui
   ports:
