--- a/.github/workflows/gke.yml
+++ b/.github/workflows/gke.yml
@@ -52,12 +52,11 @@ jobs:
 
     # Build the Docker image
     - name: Build
+      working-directory: src/search_engine_crawler
       run: |-
         docker build \
-          --tag "gcr.io/$PROJECT_ID/$ENGINE_IMAGE:$GITHUB_SHA" 
+          --tag "gcr.io/$PROJECT_ID/$ENGINE_IMAGE:$GITHUB_SHA"   .
 
-          .
-        working-directory: src/search_engine_crawler
 
     # Push the Docker image to Google Container Registry
     - name: Publish
