--- a/.github/workflows/gke.yml
+++ b/.github/workflows/gke.yml
@@ -54,8 +54,7 @@ jobs:
     - name: Build
       working-directory: src/search_engine_crawler
       run: |-
-        docker build \
-          --tag "gcr.io/$PROJECT_ID/$ENGINE_IMAGE:$GITHUB_SHA"   .
+        docker build   -t "gcr.io/$PROJECT_ID/$ENGINE_IMAGE:$GITHUB_SHA" .
 
 
     # Push the Docker image to Google Container Registry
