--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -5,10 +5,12 @@ name: Тесты исходного кода
 
 on:
   push:
+    paths:
+      - src/
     branches: [ master ]
   pull_request:
     branches: [ master ]
-
+        
 jobs:
   build:
 
