--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -6,7 +6,7 @@ name: Тесты исходного кода
 on:
   push:
     paths:
-      - src/
+      - 'src/**'
     branches: [ master ]
   pull_request:
     branches: [ master ]
