--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,10 @@
 name: make-master
 
 on:
+
   push:
+    paths:
+     - 'src/**'
     branches: [ master ]
   pull_request:
     branches: [ master ]
