--- a/.github/workflows/gke.yml
+++ b/.github/workflows/gke.yml
@@ -68,5 +68,24 @@ jobs:
       run: |-
         docker push "gcr.io/$PROJECT_ID/$ENGINE_IMAGE:$GITHUB_SHA"
         docker push "gcr.io/$PROJECT_ID/$UI_IMAGE:$GITHUB_SHA"
- 
+
+    # Get the GKE credentials so we can deploy to the cluster
+    - run: |-
+        gcloud container clusters get-credentials "$GKE_CLUSTER" --zone "$GKE_ZONE"
+
+
+    # Set up kustomize
+    - name: Set up Kustomize
+      run: |-
+        curl -sfLo kustomize https://github.com/kubernetes-sigs/kustomize/releases/download/v3.1.0/kustomize_3.1.0_linux_amd64
+        chmod u+x ./kustomize
+
+     # Deploy the Docker image to the GKE cluster
+    - name: Deploy
+      working-directory: k8s/app-deployments
+      run: |-
+        ./kustomize edit set image ui_image=gcr.io/${{ secrets.GCLOUD_PROJECT_ID }}/$UI_IMAGE:$GITHUB_SHA
+        ./kustomize edit set image crawler_image=gcr.io/${{ secrets.GCLOUD_PROJECT_ID }}/$ENGINE_IMAGE:$GITHUB_SHA
+        ./kustomize build . | kubectl apply -f -
+        kubectl get services -o wide
  
