--- a/.github/workflows/gke.yml
+++ b/.github/workflows/gke.yml
@@ -76,6 +76,7 @@ jobs:
 
     # Set up kustomize
     - name: Set up Kustomize
+      working-directory: k8s/app-deployments
       run: |-
         curl -sfLo kustomize https://github.com/kubernetes-sigs/kustomize/releases/download/v3.1.0/kustomize_3.1.0_linux_amd64
         chmod u+x ./kustomize
