--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ docker/.env
 */*.tfstate
 */*.backup
 infra/terraform/terraform.tfstate
+infra/terraform/.terraform.tfstate.lock.info
+infra/terraform/terraform.tfstate.backup
