--- a/.github/workflows/gke.yml
+++ b/.github/workflows/gke.yml
@@ -45,13 +45,14 @@ jobs:
 
     # Configure Docker to use the gcloud command-line tool as a credential
     # helper for authentication
-    - run: |-
+    - name: Configure Docker to use the gcloud command-line tool
+      run: |-
         gcloud --quiet auth configure-docker
 
 
 
     # Build the Docker image search_engine_crawler
-    - name: Build
+    - name: Build engine crawler
       working-directory: src/search_engine_crawler
       run: |-
         docker build   -t "gcr.io/${{ secrets.GCLOUD_PROJECT_ID }}/$ENGINE_IMAGE:$GITHUB_SHA" .
@@ -69,7 +70,8 @@ jobs:
         docker push "gcr.io/$PROJECT_ID/$UI_IMAGE:$GITHUB_SHA"
 
     # Get the GKE credentials so we can deploy to the cluster
-    - run: |-
+    - name: Set up GKE credentials
+      run: |-
         gcloud container clusters get-credentials "$GKE_CLUSTER" --zone "$GKE_ZONE"
 
 
@@ -81,7 +83,7 @@ jobs:
         chmod u+x ./kustomize
 
      # Deploy the Docker image to the GKE cluster
-    - name: Deploy
+    - name: Deploy to GKE
       working-directory: k8s/app-deployments
       run: |-
         ./kustomize edit set image ui_image=gcr.io/${{ secrets.GCLOUD_PROJECT_ID }}/$UI_IMAGE:$GITHUB_SHA
