--- a/k8s/app-deployments/kustomization.yml
+++ b/k8s/app-deployments/kustomization.yml
@@ -10,6 +10,7 @@ resources:
 - ui-deployment.yml
 - ui-service.yml
 - ui-ingress.yml
+- application-ns.yml
 images:
 - name: mongo_image
   newName: mongo
