--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ infra/terraform/terraform.tfstate
 infra/terraform/.terraform.tfstate.lock.info
 infra/terraform/terraform.tfstate.backup
 
+infra/terraform/terraform.tfstate.backup
