--- a/.github/workflows/gke.yml
+++ b/.github/workflows/gke.yml
@@ -18,6 +18,9 @@ on:
   push:
     branches:
     - test_gke_deployment
+    paths:
+    - 'src/**'
+
 
 env:
   PROJECT_ID: ${{ secrets.GKE_PROJECT }}
@@ -88,6 +91,6 @@ jobs:
       run: |-
         ./kustomize edit set image ui_image=gcr.io/${{ secrets.GCLOUD_PROJECT_ID }}/$UI_IMAGE:$GITHUB_SHA
         ./kustomize edit set image crawler_image=gcr.io/${{ secrets.GCLOUD_PROJECT_ID }}/$ENGINE_IMAGE:$GITHUB_SHA
-        ./kustomize build . | kubectl apply -n application-namespace -f -
+        ./kustomize build . | kubectl apply -n application -f -
         kubectl get services -o wide
  
