--- a/k8s/monitoring-deployments/crawler-monitoring-service.yml
+++ b/k8s/monitoring-deployments/crawler-monitoring-service.yml
@@ -2,12 +2,11 @@ kind: Service
 apiVersion: v1
 metadata:
   name: crawler-service
+  namespace: monitoring
   labels:
     release: "1"
 spec:
-  type: ClusterIP
-  selector:
-    app: crawler
+  type: ExternalName
+  externalName: crawler-service.application.svc.cluster.local
   ports:
   - port: 8000
-    targetPort: 8000
