--- a/k8s/monitoring-deployments/ui-monitoring-service.yml
+++ b/k8s/monitoring-deployments/ui-monitoring-service.yml
@@ -2,12 +2,11 @@ kind: Service
 apiVersion: v1
 metadata:
   name: ui-service
+  namespace: monitoring
   labels:
     release: "1"
 spec:
-  type: ClusterIP
-  selector:
-    app: ui
+  type: ExternalName
+  externalName: ui-service.application.svc.cluster.local
   ports:
   - port: 8000
-    targetPort: 8000
