--- a/infra/helm/grafana/templates/dashboards-json-configmap.yaml
+++ b/infra/helm/grafana/templates/dashboards-json-configmap.yaml
@@ -26,6 +26,7 @@ data:
 {{- end }}
 {{- end }}
 {{- if not $dashboardFound }}
+############################################################# tst2
   {}
 {{- end }}
 {{- end }}
