--- a/infra/helm/grafana/values.yaml
+++ b/infra/helm/grafana/values.yaml
@@ -354,14 +354,35 @@ dashboardProviders:
       editable: true
       options:
         path: /var/lib/grafana/dashboards/default
-    - name: 'extra'
+
+    - name: 'prometheus'
       orgId: 1
-      folder: 'Extra'
+      folder: 'Prometheus K8S Cluster'
       type: file
       disableDeletion: true
       editable: true
       options:
-        path: /var/lib/grafana/dashboards/extra
+        path: /var/lib/grafana/dashboards/prometheus
+
+    - name: 'rabbit'
+      orgId: 1
+      folder: 'Rabbit'
+      type: file
+      disableDeletion: true
+      editable: true
+      options:
+        path: /var/lib/grafana/dashboards/rabbit
+
+    - name: 'mongo'
+      orgId: 1
+      folder: 'Mongo'
+      type: file
+      disableDeletion: true
+      editable: true
+      options:
+        path: /var/lib/grafana/dashboards/mongo
+
+
 ## Configure grafana dashboard to import
 ## NOTE: To use dashboards you must also enable/configure dashboardProviders
 ## ref: https://grafana.com/dashboards
@@ -369,25 +390,37 @@ dashboardProviders:
 ## dashboards per provider, use provider name as key.
 ##
 dashboards: 
-   default:
+  default:
   #   some-dashboard:
   #  -  json: |
   #       $RAW_JSON
  #   - custom-dashboard:
  #     - json: |
  #               { "annotations": { "list": [ { "builtIn": 1, "datasource": "-- Grafana --", "enable": true, "hide": true, "iconColor": "rgba(0, 211, 255, 1)", "name": "Annotations & Alerts", "type": "dashboard" } ] }, "editable": true, "gnetId": null, "graphTooltip": 0, "id": 1, "links": [], "panels": [ { "datasource": "Prometheus", "fieldConfig": { "defaults": { "custom": {}, "mappings": [], "thresholds": { "mode": "absolute", "steps": [ { "color": "green", "value": null } ] }, "unit": "none" }, "overrides": [] }, "gridPos": { "h": 5, "w": 24, "x": 0, "y": 0 }, "id": 6, "interval": "", "options": { "colorMode": "value", "graphMode": "area", "justifyMode": "auto", "orientation": "auto", "reduceOptions": { "calcs": [ "lastNotNull" ], "fields": "", "values": false } }, "pluginVersion": "7.0.5", "targets": [ { "expr": "crawler_pages_parsed{}", "instant": false, "interval": "", "legendFormat": "Кол-во обработанных ботом страниц $namespace", "refId": "A" } ], "timeFrom": null, "timeShift": null, "title": "Число обработанных станиц", "type": "stat" }, { "aliasColors": {}, "bars": false, "dashLength": 10, "dashes": false, "datasource": "Prometheus", "fieldConfig": { "defaults": { "custom": {} }, "overrides": [] }, "fill": 5, "fillGradient": 10, "gridPos": { "h": 8, "w": 12, "x": 0, "y": 5 }, "hiddenSeries": false, "id": 10, "legend": { "avg": false, "current": false, "max": false, "min": false, "show": true, "total": false, "values": false }, "lines": true, "linewidth": 1, "nullPointMode": "null", "options": { "dataLinks": [] }, "percentage": false, "pointradius": 2, "points": true, "renderer": "flot", "seriesOverrides": [], "spaceLength": 10, "stack": false, "steppedLine": false, "targets": [ { "expr": "crawler_page_parse_time_bucket", "instant": false, "interval": "", "legendFormat": "Время затраченное ботом на обработку содержимого веб-страницы за минуту $namespace", "refId": "A" } ], "thresholds": [], "timeFrom": null, "timeRegions": [], "timeShift": null, "title": "Engine - время разбора страницы", "tooltip": { "shared": true, "sort": 0, "value_type": "individual" }, "type": "graph", "xaxis": { "buckets": null, "mode": "time", "name": null, "show": true, "values": [] }, "yaxes": [ { "format": "short", "label": null, "logBase": 1, "max": null, "min": null, "show": true }, { "format": "short", "label": null, "logBase": 1, "max": null, "min": null, "show": true } ], "yaxis": { "align": false, "alignLevel": null } }, { "aliasColors": {}, "bars": false, "dashLength": 10, "dashes": false, "datasource": "Prometheus", "fieldConfig": { "defaults": { "custom": {} }, "overrides": [] }, "fill": 5, "fillGradient": 10, "gridPos": { "h": 8, "w": 12, "x": 12, "y": 5 }, "hiddenSeries": false, "id": 8, "legend": { "avg": false, "current": false, "max": false, "min": false, "show": true, "total": false, "values": false }, "lines": true, "linewidth": 1, "nullPointMode": "null", "options": { "dataLinks": [] }, "percentage": false, "pointradius": 2, "points": true, "renderer": "flot", "seriesOverrides": [], "spaceLength": 10, "stack": false, "steppedLine": false, "targets": [ { "expr": "histogram_quantile(0.95, sum(rate(crawler_page_parse_time_bucket[5m])) by (le))", "format": "time_series", "instant": false, "interval": "", "legendFormat": "Среднее время получения страницы ", "refId": "A" } ], "thresholds": [], "timeFrom": null, "timeRegions": [], "timeShift": null, "title": "Engine - Среднее время парсинга страницы за час", "tooltip": { "shared": true, "sort": 0, "value_type": "individual" }, "type": "graph", "xaxis": { "buckets": null, "mode": "time", "name": null, "show": true, "values": [] }, "yaxes": [ { "format": "short", "label": null, "logBase": 1, "max": null, "min": null, "show": true }, { "format": "short", "label": null, "logBase": 1, "max": null, "min": null, "show": true } ], "yaxis": { "align": false, "alignLevel": null } }, { "aliasColors": {}, "bars": false, "dashLength": 10, "dashes": false, "datasource": null, "fieldConfig": { "defaults": { "custom": {} }, "overrides": [] }, "fill": 5, "fillGradient": 10, "gridPos": { "h": 9, "w": 12, "x": 0, "y": 13 }, "hiddenSeries": false, "id": 2, "interval": "", "legend": { "avg": false, "current": false, "max": false, "min": false, "show": true, "total": false, "values": false }, "lines": true, "linewidth": 1, "nullPointMode": "null", "options": { "dataLinks": [] }, "percentage": false, "pointradius": 2, "points": true, "renderer": "flot", "seriesOverrides": [], "spaceLength": 10, "stack": false, "steppedLine": false, "targets": [ { "expr": "rate(web_pages_served [1h])", "format": "time_series", "instant": false, "interval": "", "intervalFactor": 1, "legendFormat": "Кол-во обработанных запросов за час", "refId": "A" } ], "thresholds": [], "timeFrom": null, "timeRegions": [], "timeShift": null, "title": " UI - Количество обработанных запросов за час", "tooltip": { "shared": true, "sort": 0, "value_type": "individual" }, "type": "graph", "xaxis": { "buckets": null, "mode": "time", "name": null, "show": true, "values": [] }, "yaxes": [ { "format": "short", "label": null, "logBase": 1, "max": null, "min": null, "show": true }, { "format": "short", "label": null, "logBase": 1, "max": null, "min": null, "show": true } ], "yaxis": { "align": false, "alignLevel": null } }, { "aliasColors": {}, "bars": false, "dashLength": 10, "dashes": false, "datasource": "Prometheus", "fieldConfig": { "defaults": { "custom": {} }, "overrides": [] }, "fill": 5, "fillGradient": 10, "gridPos": { "h": 9, "w": 12, "x": 12, "y": 13 }, "hiddenSeries": false, "id": 4, "interval": "", "legend": { "avg": false, "current": false, "max": false, "min": false, "show": true, "total": false, "values": false }, "lines": true, "linewidth": 1, "nullPointMode": "null", "options": { "dataLinks": [] }, "percentage": false, "pointradius": 2, "points": true, "renderer": "flot", "seriesOverrides": [], "spaceLength": 10, "stack": false, "steppedLine": false, "targets": [ { "expr": "histogram_quantile(0.95, sum(rate(web_page_gen_time_bucket[5m])) by (le))", "interval": "", "legendFormat": "Среднее время генерации страницы за минуту $namespace", "refId": "A" } ], "thresholds": [], "timeFrom": null, "timeRegions": [], "timeShift": null, "title": " UI - Среднее время генерации страницы", "tooltip": { "shared": true, "sort": 0, "value_type": "individual" }, "type": "graph", "xaxis": { "buckets": null, "mode": "time", "name": null, "show": true, "values": [] }, "yaxes": [ { "format": "short", "label": null, "logBase": 1, "max": null, "min": null, "show": true }, { "format": "short", "label": null, "logBase": 1, "max": null, "min": null, "show": true } ], "yaxis": { "align": false, "alignLevel": null } } ], "refresh": "5s", "schemaVersion": 25, "style": "dark", "tags": [], "templating": { "list": [] }, "time": { "from": "now-5m", "to": "now" }, "timepicker": { "refresh_intervals": [ "10s", "30s", "1m", "5m", "15m", "30m", "1h", "2h", "1d" ] }, "timezone": "", "title": "crawler dashboard", "uid": "wefsdf6546", "version": 10 }
-      - file: dashboards/custom-dashboard.json
+    - file: dashboards/custom-dashboard.json
   
-   extra:
-     kubernetes-cluster:
-       gnetId: 7249
-       datasource: Prometheus
-     nginx-ingress:
-       gnetId: 9614
-       datasource: Prometheus
-     kubernetes-cluster-monitoring-prometheus:
-       gnetId: 1621
-       datasource: Prometheus
+  prometheus:
+    kubernetes-cluster:
+      gnetId: 7249
+      datasource: Prometheus
+    nginx-ingress:
+      gnetId: 9614
+      datasource: Prometheus
+    kubernetes-cluster-monitoring-prometheus:
+      gnetId: 1621
+      datasource: Prometheus
+ 
+  rabbit:
+    rabbit-cluster:
+      gnetId: 10982
+      datasource: Prometheus
+
+
+  mongo:
+    mongo-cluster:
+      gnetId: 2583
+      datasource: Prometheus
+
   #   local-dashboard:
   #     url: https://example.com/repository/test.json
   #   local-dashboard-base64:
