--- a/k8s/monitoring-deployments/kustomization.yaml
+++ b/k8s/monitoring-deployments/kustomization.yaml
@@ -1,7 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-- crawler-monitoring-service.yml
-- ui-monitoring-service.yml
-- monitoring-ns.yml
+- crawler-monitoring-service.yaml
+- ui-monitoring-service.yaml
+- monitoring-ns.yaml
 - rabbit-monitoring-service.yaml
+- mongodb-monitoring-service.yaml
