--- a/.gitignore
+++ b/.gitignore
@@ -3,10 +3,15 @@ notes.md
 docker/.env
 .vscode
 *.terraform/
-*/*.tfstate
-*/*.backup
-infra/terraform/terraform.tfstate
-infra/terraform/.terraform.tfstate.lock.info
+*.tfstate
+*.backup
+infra/**.tfstate
+*.tfstate.lock.info
 infra/terraform/terraform.tfstate.backup
 
 infra/terraform/terraform.tfstate.backup
+
+
+#infra/minikube
+План_demo.md
+
