--- a/.github/workflows/slack-notify.yml
+++ b/.github/workflows/slack-notify.yml
@@ -1,5 +1,7 @@
-on: push
-  branches: [ test_notif ]
+
+on:
+  push:
+    branches: [ test_notif ]
 name: Slack Notification Demo
 jobs:
   slackNotification:
