--- a/.github/workflows/slack-notify.yml
+++ b/.github/workflows/slack-notify.yml
@@ -17,3 +17,4 @@ jobs:
         SLACK_TITLE: "Сборка завершена" 
         SLACK_ICON: https://github.com/rtCamp.png?size=48
         SLACK_MESSAGE: "Сборка завершена - смотри логи" 
+        SLACK_FOOTER: "OTUS GHA BOT"
