--- a/.github/workflows/slack-notify.yml
+++ b/.github/workflows/slack-notify.yml
@@ -16,5 +16,5 @@ jobs:
         SLACK_USERNAME: "Бот сборочного конвеера" 
         SLACK_TITLE: "Сборка завершена" 
         SLACK_ICON: https://github.com/rtCamp.png?size=48
-        SLACK_MESSAGE: format('Сборка завершена {0} - смотри логи', '${{ job.status }}) 
+        SLACK_MESSAGE: format('Сборка завершена {0} - смотри логи', ${{ job.status }}) 
         SLACK_FOOTER: "OTUS GHA BOT"
