--- a/.github/workflows/slack-notify.yml
+++ b/.github/workflows/slack-notify.yml
@@ -11,8 +11,8 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: set err
-      run:
-        exit 1
+      run: echo ::set-output name=status::failure
+      continue-on-error: true
 
     - name: Set env
       if: ${{ success() }}
