--- a/.github/workflows/slack-notify.yml
+++ b/.github/workflows/slack-notify.yml
@@ -11,7 +11,7 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: set err
-      run: echo ::set-output name=status::failure
+      run: exit 1
       continue-on-error: true
 
     - name: Set env
