--- a/.github/workflows/gke.yml
+++ b/.github/workflows/gke.yml
@@ -65,9 +65,30 @@ jobs:
       run: |-
         docker build   -t "gcr.io/${{ secrets.GCLOUD_PROJECT_ID }}/$UI_IMAGE:$GITHUB_SHA" .
 
+    - name: Set env
+      if: ${{ success() }}
+      run: 
+          echo ::set-env name=STEPVAR::'Сборка завершена '${{ job.status }} '  
+
+    - name: Set env failure
+      if: ${{ !failure() }}
+      run: 
+          echo ::set-env name=STEPVAR::'Сборка НЕ завершена '${{ job.status }} ' смотри логи' 
+
+    - name: Slack Notification Build
+      uses: rtCamp/action-slack-notify@master
+      env:
+        SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+        SLACK_USERNAME: "Бот сборочного конвеера" 
+        SLACK_TITLE: "Сборка завершена" 
+        SLACK_ICON: https://github.com/rtCamp.png?size=48
+        SLACK_MESSAGE: ${{ env.STEPVAR }} 
+        SLACK_FOOTER: "OTUS GHA BOT"
+
 
     # Push the Docker image to Google Container Registry
     - name: Publish
+      needs = ["Build engine crawler", "Build crawler_ui"]
       run: |-
         docker push "gcr.io/$PROJECT_ID/$ENGINE_IMAGE:$GITHUB_SHA"
         docker push "gcr.io/$PROJECT_ID/$UI_IMAGE:$GITHUB_SHA"
@@ -81,6 +102,7 @@ jobs:
     # Set up kustomize
     - name: Set up Kustomize
       working-directory: k8s/app-deployments
+      needs = ["Publish"]
       run: |-
         curl -sfLo kustomize https://github.com/kubernetes-sigs/kustomize/releases/download/v3.1.0/kustomize_3.1.0_linux_amd64
         chmod u+x ./kustomize
@@ -91,6 +113,7 @@ jobs:
 
      # Deploy the Docker image to the GKE cluster
     - name: Deploy to GKE  (application)
+      needs = ["Publish"]
       working-directory: k8s/app-deployments
       run: |-
         ./kustomize edit set image ui_image=gcr.io/${{ secrets.GCLOUD_PROJECT_ID }}/$UI_IMAGE:$GITHUB_SHA
@@ -100,6 +123,7 @@ jobs:
  
      # Deploy the Docker image to the GKE cluster
     - name: Deploy to GKE (monitoring services)
+      needs = ["Publish"]
       working-directory: k8s/monitoring-deployments
       run: |-
         ./kustomize build . | kubectl apply -n monitoring -f -
