--- a/.github/workflows/gke.yaml
+++ b/.github/workflows/gke.yaml
@@ -31,7 +31,7 @@ env:
   UI_IMAGE: crawler_ui
 
 jobs:
-  setup-build-publish-deploy:
+  setup-build:
     name: Setup, Build, Publish, and Deploy
     runs-on: ubuntu-latest
 
@@ -71,7 +71,7 @@ jobs:
           echo ::set-env name=STEPVAR::'Сборка завершена '${{ job.status }} '  
 
     - name: Set env failure
-      if: ${{ !failure() }}
+      if: ${{ failure() }}
       run: 
           echo ::set-env name=STEPVAR::'Сборка НЕ завершена '${{ job.status }} ' смотри логи' 
 
@@ -86,34 +86,41 @@ jobs:
         SLACK_FOOTER: "OTUS GHA BOT"
 
 
+  publish:
+    name: Publish to to Google Container Registry
+    runs-on: ubuntu-latest
+    needs:  ["setup-build"]
+    
+    steps:
+
     # Push the Docker image to Google Container Registry
     - name: Publish
-      needs = ["Build engine crawler", "Build crawler_ui"]
+
       run: |-
         docker push "gcr.io/$PROJECT_ID/$ENGINE_IMAGE:$GITHUB_SHA"
         docker push "gcr.io/$PROJECT_ID/$UI_IMAGE:$GITHUB_SHA"
 
+  deploy:
+
+    name: Deploy to GKE
+    runs-on: ubuntu-latest
+    needs:  ["publish"]
+
+    steps: 
     # Get the GKE credentials so we can deploy to the cluster
     - name: Set up GKE credentials
       run: |-
         gcloud container clusters get-credentials "$GKE_CLUSTER" --zone "$GKE_ZONE"
-
-
     # Set up kustomize
     - name: Set up Kustomize
       working-directory: k8s/app-deployments
-      needs = ["Publish"]
       run: |-
         curl -sfLo kustomize https://github.com/kubernetes-sigs/kustomize/releases/download/v3.1.0/kustomize_3.1.0_linux_amd64
         chmod u+x ./kustomize
         cp kustomize ../monitoring-deployments
 
-
-
-
      # Deploy the Docker image to the GKE cluster
     - name: Deploy to GKE  (application)
-      needs = ["Publish"]
       working-directory: k8s/app-deployments
       run: |-
         ./kustomize edit set image ui_image=gcr.io/${{ secrets.GCLOUD_PROJECT_ID }}/$UI_IMAGE:$GITHUB_SHA
@@ -123,9 +130,31 @@ jobs:
  
      # Deploy the Docker image to the GKE cluster
     - name: Deploy to GKE (monitoring services)
-      needs = ["Publish"]
       working-directory: k8s/monitoring-deployments
       run: |-
         ./kustomize build . | kubectl apply -n monitoring -f -
         kubectl get services -o wide
         kubectl get services -o wide -n monitoring 
+
+
+
+    - name: Set env failure
+      if: ${{ failure() }}
+      run: 
+          echo ::set-env name=STEPVAR::'Деплой НЕ завершен '${{ job.status }} ' смотри логи' 
+
+    - name: Set env
+      if: ${{ success() }}
+      run: 
+          echo ::set-env name=STEPVAR::'Сборка завершена '${{ job.status }} '  
+
+
+    - name: Slack Notification Build
+      uses: rtCamp/action-slack-notify@master
+      env:
+        SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+        SLACK_USERNAME: "Бот сборочного конвеера" 
+        SLACK_TITLE: "Деплой завершен" 
+        SLACK_ICON: https://github.com/rtCamp.png?size=48
+        SLACK_MESSAGE: ${{ env.STEPVAR }} 
+        SLACK_FOOTER: "OTUS GHA BOT"
