--- a/.github/workflows/gke.yml
+++ b/.github/workflows/gke.yml
@@ -32,7 +32,7 @@ env:
 
 jobs:
   setup-build:
-    name: Setup, Build, Publish, and Deploy
+    name: Setup, Build
     runs-on: ubuntu-latest
 
     steps:
@@ -85,13 +85,6 @@ jobs:
         SLACK_MESSAGE: ${{ env.STEPVAR }} 
         SLACK_FOOTER: "OTUS GHA BOT"
 
-
-  publish:
-    name: Publish to to Google Container Registry
-    runs-on: ubuntu-latest
-    needs:  ["setup-build"]
-    
-    steps:
 
     # Push the Docker image to Google Container Registry
     - name: Publish
