--- a/.github/workflows/gke.yml
+++ b/.github/workflows/gke.yml
@@ -31,7 +31,7 @@ env:
   UI_IMAGE: crawler_ui
 
 jobs:
-  setup-build:
+  setup-build-publish:
     name: Setup, Build
     runs-on: ubuntu-latest
 
@@ -97,7 +97,7 @@ jobs:
 
     name: Deploy to GKE
     runs-on: ubuntu-latest
-    needs:  ["publish"]
+    needs:  ["setup-build-publish"]
 
     steps: 
     # Get the GKE credentials so we can deploy to the cluster
