--- a/.github/workflows/gke.yml
+++ b/.github/workflows/gke.yml
@@ -99,7 +99,10 @@ jobs:
     runs-on: ubuntu-latest
     needs:  ["setup-build-publish"]
 
-    steps: 
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v2
+
     # Setup gcloud CLI
     - uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
       with:
