--- a/.github/workflows/gke.yml
+++ b/.github/workflows/gke.yml
@@ -155,7 +155,7 @@ jobs:
     - name: Set env
       if: ${{ success() }}
       run: 
-          echo ::set-env name=STEPVAR::'Сборка завершена '${{ job.status }} '  
+          echo ::set-env name=STEPVAR::'Сборка завершена '${{ job.status }}   
 
 
     - name: Slack Notification Build
